Default to EAST instead of RTGOESR [3164]
For the Sat>Imagery and Under Dev>GLM choosers, default to adde.ucar.edu/EAST instead of adde.ucar.edu/RTGOESR.  EAST points at the operational GOES-East satellite.  RTGOESR will only work as long as GOES-R is the operational satellite.

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -88,13 +88,13 @@ mcidasv.chooser.adde.image.servers.system = true
 # ucar/unidata/idv/resources/choosers.xml.
 
 idv.defaultselection.chooser.image.server=adde.ucar.edu
-idv.defaultselection.chooser.image.group=RTGOESR
+idv.defaultselection.chooser.image.group=EAST
 
 idv.defaultselection.chooser.imageparameter.server=adde.ucar.edu
-idv.defaultselection.chooser.imageparameter.group=RTGOESR
+idv.defaultselection.chooser.imageparameter.group=EAST
 
 idv.defaultselection.chooser.glm.server=adde.ucar.edu
-idv.defaultselection.chooser.glm.group=RTGOESR
+idv.defaultselection.chooser.glm.group=EAST
 
 idv.title.proplabel = "McIDAS-V"
 idv.title.propdesc = Title to use for windows, etc.
